--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,65 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
+.venv/
+venv/
+ENV/
+env/
+.env
+
+# IDE and editors
+.kiro/
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Project specific
 logs/*
 pids/*
 tmp/
-.kiro
+*.log
+*.pid
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# GoTTY binaries and archives
+gotty
+*.tar.gz
+*.zip
+
+# Gradio temporary files
+gradio_cached_examples/
+flagged/
+
+# UV package manager
+.uv_cache/
