--- a/ttyd/conf.ini
+++ b/ttyd/conf.ini
@@ -6,10 +6,10 @@ port=7681
 credential=demo:password123
 permit_write=true
 max_clients=10
-timeout=300
+timeout=600
 
-# 终端配置
-terminal_type=xterm-256color
+# 终端配置 - 使用基本的 xterm
+terminal_type=xterm
 title_format="Terminal API - {terminal}"
 
 # 安全配置
@@ -18,7 +18,7 @@ once=false
 readonly=false
 
 # 网络配置
-ping_interval=30
+ping_interval=15
 reconnect=true
 ipv6=false
 
