refactor: modular layered arch

--- a/ttyd/conf.ini
+++ b/ttyd/conf.ini
@@ -36,10 +36,9 @@ debug_level=7
 work_dir="/tmp/ttyd"
 
 # 默认终端类型和命令
-default_terminal=bash
-bash_command="bash"
-qcli_command="q chat --resume"
-python_command="python3"
+default_terminal=qterm
+qterm_command="qterm"
+qcli_command="tmux new-session -A -s qcli-session q chat --resume"
 
 # 服务管理配置
 pid_dir="ttyd/pids"
