--- a/ttyd/conf.ini
+++ b/ttyd/conf.ini
@@ -38,7 +38,7 @@ work_dir="/tmp/ttyd"
 # 默认终端类型和命令
 default_terminal=qterm
 qterm_command="qterm"
-qcli_command="tmux new-session -A -s qcli-session q chat --resume"
+qcli_command="tmux new-session -A -s qcli-session q chat -ra"
 
 # 服务管理配置
 pid_dir="ttyd/pids"
