--- a/ttyd/conf.ini
+++ b/ttyd/conf.ini
@@ -38,7 +38,8 @@ work_dir="/tmp/ttyd"
 # 默认终端类型和命令
 default_terminal=qterm
 qterm_command="qterm"
-qcli_command="tmux new-session -A -s qcli-session q chat -ra"
+# 直接运行 Q CLI，不使用 tmux
+qcli_command="q chat -a"
 
 # 服务管理配置
 pid_dir="ttyd/pids"
