--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,6 @@ requires-python = ">=3.12"
 dependencies = [
     "gradio>=5.0.0",
     "requests>=2.25.0",
-    "websockets>=12.0"
+    "stransi>=0.3.0",
+    "websockets>=12.0",
 ]
